--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@ Percentage, Summation, Skewness</h1>
     </style>
     
 
-             <div class="container"><div class="row"> <div class="col-md-12  col-sm-3" style = "
-               box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">
+             <div class="container"><div class="row"> <div class="col-md-4  col-sm-3" style = "
+                 box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;"></div>
+               <div class="col-md-4  col-sm-3" style = "
+                 box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;">  
             <div class="myfigure">
                 <h2>Another bar chart based on the TRUMP's statistics</h2> 
                 <div class="bar-block" style="height: 200px;left:40"> 40 </div>
@@ -107,7 +109,9 @@ Percentage, Summation, Skewness</h1>
                 <div class="bar-block" style="height: 28px;left:140"> 7</div>
                 <div class="bar-block" style="height: 24px;left:190"> 6 </div>
                 <div class="bar-block" style="height: 20px;left:240"> 5 </div>
-                 </div></div></div>
+                 </div></div>
+                  <div class="col-md-4  col-sm-3" style = "
+                 box-shadow: inset 1px -1px 1px #444, inset -1px 1px 1px #444;"></div></div>
         </section>
         
 
